--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="958a8d">  <td>20/02/05 09:02:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.dateChanging_TC_9()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@43814d18]">dateChanging_TC_9</td> 
-  <td>pool-1-thread-1@1035457853</td>   <td></td> </tr>
-<tr bgcolor="7ec378">  <td>20/02/05 09:02:35</td>   <td>-19866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@43814d18]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@1035457853</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/05 12:56:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.VerifyPopularVacationPackages_TC_13(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">VerifyPopularVacationPackages_TC_13</td> 
+  <td>pool-1-thread-3@2125787496</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:54:54</td>   <td>-75195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:55:19</td>   <td>-50582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:55:55</td>   <td>-14603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:56:17</td>   <td>7524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:56:45</td>   <td>36374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:57:24</td>   <td>74482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:55:14</td>   <td>-54909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:55:50</td>   <td>-18693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:56:17</td>   <td>7435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:56:45</td>   <td>36258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:57:20</td>   <td>70395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 12:57:39</td>   <td>89781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/05 12:56:32</td>   <td>22471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyCity_TC_10(java.lang.reflect.Method)[pri:3, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">verifyCity_TC_10</td> 
+  <td>pool-1-thread-4@97017154</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/05 12:57:39</td>   <td>89733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyFooterText_TC_16(java.lang.reflect.Method)[pri:5, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">verifyFooterText_TC_16</td> 
+  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/05 12:55:10</td>   <td>-59313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyMoreHighlightAndAttractionLinks_TC_11(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">verifyMoreHighlightAndAttractionLinks_TC_11</td> 
+  <td>pool-1-thread-1@1079868329</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/05 12:55:33</td>   <td>-35812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyOtherVacationPackages_TC_12(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">verifyOtherVacationPackages_TC_12</td> 
+  <td>pool-1-thread-2@1489363117</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/05 12:57:00</td>   <td>51269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyStartAgainLink_TC_15(java.lang.reflect.Method)[pri:4, instance:com.tripmasters.framework.testScript.HomePageTestScript@43814d18]">verifyStartAgainLink_TC_15</td> 
+  <td>pool-1-thread-5@1647137009</td>   <td></td> </tr>
 </table>
